src/test/compile-fail/occurs-check.rs
// error-pattern: can not instantiate infinite type
fn main() { let f; f = @f; }
